# transannot

./: .gitignore  CMakeLists.txt  README.md  TransAnnot.def  annotate.sh  azure-pipelines.yml  meta.yaml
.github/: ISSUE_TEMPLATE.md
data/: CMakeLists.txt  Pfam-A.clans.tsv  access_uniprot.py  access_uniprot_try.py  annotate.cpp  annotate.sh  annotate_profiles.sh  annotatecustom.sh  annotateprofiles.sh  assemble.sh  assemblereads.sh  assembly.sh  contamination.sh  createdb.sh  createquerydb.sh  createsetdb.sh  downloaddb.sh  easytransannot.sh  getorthologs.sh  search_eggnog.py  search_pfama.py
examples/: Deinococcus_radiodurans_SRR19025978_trinity.Trinity.fasta.transdecoder.pep  SwissProt_small  SwissProt_small.index  eggNOG_DB_small  eggNOG_DB_small.index  eggNOG_DB_small.source  eggNOG_DB_small_h  pfamA_small  pfamA_small.index  pfamA_small_h  pfamA_small_h.index  resDB_regression
lib/mmseqs/src/taxonomy/: lca.cpp
lib/mmseqs/util/regression/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  fit_sens.R  fit_sens.sh  run_regression.sh
lib/mmseqs/util/regression/data/: RBHproteinsA.fas  RBHproteinsB.fas  dna.fas  five_profiles.fasta  genes.fasta  mock.tsv  query.fasta  query_pow2.fasta  scop20.fasta  targetannotation.mapping
lib/mmseqs/util/regression/data/filterTax/: bacsToTaxid.tsv  bacs_w_tax.fas
lib/mmseqs/util/regression/data/ncbitax/: delnodes.dmp  merged.dmp  names.dmp  nodes.dmp
lib/mmseqs/util/regression/lib/: PatternCompiler.h
lib/mmseqs/util/regression/regression/: compare_frags.pl  extractorfs.pl  run_apply.sh  run_cluster.sh  run_cluster_update.sh  run_clusthash.sh  run_dbprofile.sh  run_dbprofile_index.sh  run_easy_cluster.sh  run_easy_cluster_reassign.sh  run_easy_linclust.sh  run_easy_nuclcluster.sh  run_easy_nuclnucl_linsearch_split.sh  run_easy_nuclnucltax.sh  run_easy_profile.sh  run_easy_search.sh  run_easy_search_index_split.sh  run_easy_search_taxoutput.sh  run_expand.sh  run_extractorfs.sh  run_filterdb.sh  run_filtertaxseqdb.sh  run_index_compatible.sh  run_linclust.sh  run_linclust_split.sh  run_multihit.sh  run_nuclnucl.sh  run_nuclnucl_linsearch.sh  run_nuclnucl_linsearchtranslated.sh  run_nuclnucl_translated.sh  run_nuclprot.sh  run_nuclprottax.sh  run_prefilter_db_load_mode.sh  run_profile.sh  run_profilestates.sh  run_protnucl.sh  run_rbh.sh  run_search.sh  run_sliceprofile.sh  run_slicetechnical.sh  (+1 more)
lib/mmseqs/util/regression/samtools/: make_samtools.sh  samtools-darwin  samtools-linux  samtools-linux-aarch64  samtools-linux-ppc64le  samtools.sh
lib/mmseqs/util/regression/src/: EvaluateResults.cpp  EvaluateResults.h
src/: CMakeLists.txt  LocalCommandDeclarations.h  annotate.cpp  transannot.cpp
src/commons/: CMakeLists.txt  LocalParameters.cpp  LocalParameters.h
src/util/: CMakeLists.txt  GetGoIDs.cpp  GetGoIds.cpp  client.hpp
src/workflow/: CMakeLists.txt  annotate.cpp  annotatecustom.cpp  annotateprofiles.cpp  assemble.cpp  assemblereads.cpp  assembly.cpp  contamination.cpp  createdb.cpp  createquerydb.cpp  downloaddb.cpp  easytransannot.cpp  getorthologs.cpp
util/: access_uniprot.py  build_and_compile.sh  build_and_compile_macos.sh  download_mapping_db.sh  install_plass.sh  likelihood.py  report_contamination.sh  run_regression.sh  update_mmseqs.sh
